...

        Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        "InfoGames",
                        modifier = Modifier.padding(start = 16.dp),
                        style = MaterialTheme.typography.titleLarge.copy(
                            fontWeight = FontWeight.Bold,
                            fontSize = 46.sp
                        )
                    )
...
